--- a/src/popup/index.scss
+++ b/src/popup/index.scss
@@ -1,1 +1,8 @@
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+* {
+    font-size: 13px;
+  }
+
+body {
+    width: 400px;
+    height: 500px;
+}
