--- a/src/popup/components/linklist.scss
+++ b/src/popup/components/linklist.scss
@@ -18,4 +18,14 @@
             }
         }
     }
+
+    header {
+        >div{
+            min-height: 35px;
+
+            button {
+                min-height: 35px;
+            }
+        } 
+    }
 }
